--- a/style/sass/components/_buttons.scss
+++ b/style/sass/components/_buttons.scss
@@ -12,7 +12,7 @@
     width: max-content;
     font-weight: 500;
     position: relative;
-    z-index: 2;
+    z-index: 1;
     @include fillOnHover($green, black, 700);
 
     &--text-light {
